changed logging level in greeting-config

--- a/greeting-config.yml
+++ b/greeting-config.yml
@@ -8,9 +8,9 @@ management:
 
 
 logging:
-  level:
-    io:
-      pivotal: DEBUG
+ level:
+   io:
+     pivotal: INFO
 
 greeting:
   displayFortune: true
