--- a/greeting-config.yml
+++ b/greeting-config.yml
@@ -1,16 +1,8 @@
-security:
-  basic:
-    enabled: false
+security.basic.enabled: false
 
-management:
-  security:
-    enabled: false
+management.security.enabled: false
 
-
-logging:
- level:
-   io:
-     pivotal: DEBUG
+logging.level.io.pivotal: DEBUG
 
 greeting:
   displayFortune: true
