--- a/greeting-service.yml
+++ b/greeting-service.yml
@@ -1,12 +1,5 @@
-security:
-  basic:
-    enabled: false
+security.basic.enabled: false
 
-management:
-  security:
-    enabled: false
+management.security.enabled: false
 
-logging:
-  level:
-    io:
-      pivotal: DEBUG
+logging.level.io.pivotal: DEBUG
